// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBarContainer > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-progress-bar-container"
  />
</DocumentFragment>
`;

exports[`ProgressBarInner > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-progress-bar-inner"
  />
</DocumentFragment>
`;

exports[`ProgressBarItem > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-progress-bar-item"
  />
</DocumentFragment>
`;

exports[`ProgressBarPercentage > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-progress-bar-container"
  >
    <div
      aria-label="Progress bar indicator for this task"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="mocked-styled-2 el-progress-bar-inner"
      role="meter"
      style="width: 0%; transition-duration: 0.3333333333333333s;"
    >
      <div
        class="mocked-styled-3 el-progress-bar-item"
      />
    </div>
    <div
      class="el-progress-bar-label-right el-progress-bar-label"
    >
      0%
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProgressBarSteps > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-progress-bar-container"
  >
    <div
      aria-label="Progress bar indicator for this task"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="5"
      class="mocked-styled-2 el-progress-bar-inner"
      role="meter"
      style="width: 50%;"
    >
      <div
        class="mocked-styled-3 el-progress-bar-item"
      />
    </div>
    <div
      class="el-progress-bar-label-right el-progress-bar-label"
    >
      5/10 Completed
    </div>
  </div>
</DocumentFragment>
`;
